fix: IllegalClassException is replaced to IllegalArgumentException. Also: Some code check warns are fixed.