@@ -89,22 +89,22 @@ public class HistoryRetrieveService {
     private static final DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("dd MMM yyyy hh:mm:ss")
             .withLocale(Locale.US);
     private static final Map<String, Set<String>> toSkip =
-            new HashMap<String, Set<String>>() {
+            new HashMap<>() {
                 {
-                    put(HistorySituation.class.getName(), new HashSet<String>() {{
+                    put(HistorySituation.class.getName(), new HashSet<>() {{
                         add("integrationStep.name");
                     }});
                 }
             };
     private static final Set<String> childrenToIncludeInParentChanges =
-            new HashSet<String>() {
+            new HashSet<>() {
                 {
                     add(HistoryIntegrationStep.class.getName());
                 }
 
             };
     private final Javers javers;
-    private ObjectMapper objectMapper = new ObjectMapper();
+    private final ObjectMapper objectMapper = new ObjectMapper();
 
     public HistoryItemResponse getAllHistory(BigInteger objectId,
                                              Class<? extends Storable> itemType,
@@ -139,16 +139,16 @@ public class HistoryRetrieveService {
 
             List<Long> historyItemVersionsWithChanges = historyItemList.stream()
                     .map(historyItem -> Long.valueOf(historyItem.getVersion()))
-                    .collect(Collectors.toList());
+                    .toList();
 
             List<CdoSnapshot> snapshotsWithNoChanges = snapshots.stream()
                     .filter(cdoSnapshot -> !historyItemVersionsWithChanges.contains(cdoSnapshot.getVersion()))
-                    .collect(Collectors.toList());
+                    .toList();
 
             List<HistoryItem> simpleHistoryItemList = snapshotsWithNoChanges
                     .stream()
                     .map(cdoSnapshot -> createSimpleHistoryItem(cdoSnapshot, historyEntityClass))
-                    .collect(Collectors.toList());
+                    .toList();
 
             historyItemList.addAll(simpleHistoryItemList);
             historyItemList.sort(Comparator.comparingInt(HistoryItem::getVersion).reversed());
@@ -321,7 +321,7 @@ public class HistoryRetrieveService {
         QueryBuilder queryBuilder = QueryBuilder.byInstanceId(objectId, entityClass)
                 .withVersion(version).withScopeDeepPlus();
         if (Objects.nonNull(snapshots) && !snapshots.isEmpty()) {
-            queryBuilder.withCommitId(snapshots.get(0).getCommitId());
+            queryBuilder.withCommitId(snapshots.getFirst().getCommitId());
         }
         List<Shadow<Object>> shadows = javers.findShadows(queryBuilder.build());
         return shadows.stream().findFirst();
@@ -331,7 +331,7 @@ public class HistoryRetrieveService {
                                                     Shadow<Object> entity, Long revision) {
         Object object = entity.get();
         if (Objects.isNull(object)) {
-            throw new EntityNotFoundException(String.format("Shadow object is null with id:%s." + objectId));
+            throw new EntityNotFoundException(String.format("Shadow object is null with id: %s.", objectId));
         }
         HistoryCompareEntity historyCompareEntity = new HistoryCompareEntity();
         historyCompareEntity.setRevision(revision.toString());
@@ -456,7 +456,7 @@ public class HistoryRetrieveService {
                 .build());
 
         if (Objects.nonNull(snapshots) && !snapshots.isEmpty()) {
-            CommitMetadata initialCommitMetadata = snapshots.get(0).getCommitMetadata();
+            CommitMetadata initialCommitMetadata = snapshots.getFirst().getCommitMetadata();
             destination.put("createdBy",
                     StringUtils.defaultIfEmpty(initialCommitMetadata.getAuthor(), StringUtils.EMPTY));
             destination.put("createdWhen",
@@ -465,7 +465,7 @@ public class HistoryRetrieveService {
     }
 
     private Map<String, Object> convertObjectToMap(Object object) {
-        return objectMapper.convertValue(object, new TypeReference<Map<String, Object>>() {
+        return objectMapper.convertValue(object, new TypeReference<>() {
         });
     }
 
